--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.13.0",
     "bootstrap": "^4.4.1",
+    "jarallax": "^1.12.1",
     "jquery": "^3.5.0",
     "popper.js": "^1.16.1"
   }
