--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^4.4.1",
     "jarallax": "^1.12.1",
     "jquery": "^3.5.0",
+    "owl.carousel": "^2.3.4",
     "popper.js": "^1.16.1"
   }
 }
